services/stat_anno_detection/model_serving/kubernetes/stat-anno-detection.service.yml
apiVersion: v1
kind: Service
metadata:
  name: stat-anno-detection-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8383
      targetPort: 80
      protocol: TCP
  selector:
    app: stat-anno-detection
