services/stat_anno_detection/model_serving/kubernetes/stat-anno-detection.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stat-anno-detection-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: stat-anno-detection-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stat-anno-detection-service
            port:
              number: 80
  tls:
    - hosts:
        - dstat-anno-detection-csia-pme.kube.isc.heia-fr.ch
